--- a/src/html/index.html
+++ b/src/html/index.html
@@ -38,13 +38,13 @@
         <p>Custom handgrips that are<br> comfortable all day</p>
       </div>
       <div class="sticky-elem main-message">
-        <p>Undeniable and unbelievable<br> low prices</p>
+        <p>Undeniable and <br>unbelievable low prices</p>
       </div>
     </section>
       
     <section id="scroll-section-1" class="scroll-section">
-      <p>
-        <strong>Regualr Scroll area</strong>
+      <p class="description">
+        <strong>Scroll area</strong>
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto voluptatem voluptatum fugit quos impedit? Odio, sint nesciunt, explicabo, reprehenderit quod quia nemo dolorem eveniet praesentium culpa accusamus tempora facilis aspernatur? Exercitationem eaque officiis possimus delectus rem corrupti odit earum dolores aperiam esse similique impedit pariatur, eveniet saepe perferendis laboriosam voluptatibus quis iusto amet, animi ad harum, officia facere! Reprehenderit, natus. Beatae eligendi asperiores molestiae maxime sint sunt nobis quod quasi iusto, qui, magnam in dicta ducimus expedita voluptatum aperiam necessitatibus nesciunt veritatis veniam illum suscipit velit rerum error. Similique natus porro cum temporibus vel hic molestias quibusdam optio, veniam, expedita veritatis nihil iusto. Reiciendis enim, excepturi similique facilis atque suscipit. Neque ducimus tempore veniam, tempora tenetur consequuntur natus sapiente nesciunt totam libero, soluta nisi, est obcaecati laudantium. Repudiandae cumque cupiditate ipsam inventore reiciendis culpa. Dolor, quam dolore deleniti aperiam odit nostrum, in sint itaque corporis architecto laudantium! Eius temporibus doloremque voluptatem minus sequi ea? Quam vero nostrum reiciendis tempora magnam vel maiores praesentium qui magni nesciunt nulla error sapiente totam in ipsa nam adipisci quae, rem reprehenderit aperiam aspernatur cum. Dolorum fugiat nulla dolor nostrum libero. Ratione soluta, sit, saepe animi adipisci neque voluptatibus voluptates dignissimos non, pariatur aut error.
       </p>
     </section>
@@ -56,11 +56,11 @@
           Cup is you. You are Cup.
         </p>
       </div>
-      <div class="sticky-elem dec-message">
+      <div class="sticky-elem desc-message">
         <p>A number of detailed components that complete a comfortable neck-over, we've gone through the process of refreshing and reconstructing them one by one to create a new level of mugs, AirMug Pro. The sensation of putting something in your mouth disappears and only you and the drink remain.</p>
         <div class="pin"></div> 
       </div>
-      <div class="sticky-elem dec-message">
+      <div class="sticky-elem desc-message">
         <p>Proudly designed from Sweden.<br>Made in China</p>
         <div class="pin"></div> 
       </div>
@@ -76,10 +76,11 @@
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet at fuga quae perspiciatis veniam impedit et, ratione est optio porro. Incidunt aperiam nemo voluptas odit quisquam harum in mollitia. Incidunt minima iusto in corporis, dolores velit. Autem, sit dolorum inventore a rerum distinctio vero illo magni possimus temporibus dolores neque adipisci, repudiandae repellat. Ducimus accusamus similique quas earum laborum. Autem tempora repellendus asperiores illum ex! Velit ea corporis odit? Ea, incidunt delectus. Sapiente rerum neque error deleniti quis, et, quibusdam, est autem voluptate rem voluptas. Ratione soluta similique harum nihil vel. Quas inventore perferendis iusto explicabo animi eos ratione obcaecati.
       </p>
     </section>
-    
+
     <footer class="footer">
       2020, 1분 코딩
     </footer>
   </div>
 </body>
-</html>
+
+
