create CurrentSrollAnim function which target specfic elements on active area

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -28,16 +28,16 @@
     
     <section id="scroll-section-0" class="scroll-section">
       <h1>AirMug Pro</h1>
-      <div class="sticky-elem main-message">
+      <div class="sticky-elem main-message a">
         <p>High-end ceramics <br>that make you fall for it.</p>
       </div>
-      <div class="sticky-elem main-message">
+      <div class="sticky-elem main-message b">
         <p>Taste Allowing Mode to <br>Feel Surrounding Taste</p>
       </div>
-      <div class="sticky-elem main-message">
+      <div class="sticky-elem main-message c">
         <p>Custom handgrips that are<br> comfortable all day</p>
       </div>
-      <div class="sticky-elem main-message">
+      <div class="sticky-elem main-message d">
         <p>Undeniable and <br>unbelievable low prices</p>
       </div>
     </section>
@@ -84,3 +84,4 @@
 </body>
 
 
+      
