--- a/src/html/index.html
+++ b/src/html/index.html
@@ -56,6 +56,11 @@
     </section>
 
     <section id="scroll-section-2" class="scroll-section">
+
+      <div class="sticky-elem sticky-elem-canvas">
+        <canvas id="video-canvas-1" width="1920" height="1080"></canvas>
+      </div>
+
       <div class="sticky-elem main-message a">
         <p>
           <small>Comfortable Feeling</small>
