--- a/src/html/index.html
+++ b/src/html/index.html
@@ -7,7 +7,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet">
     <title>Scrolling mug</title>
 </head>
-<body>
+<body class="before-loading">
+  <div class="loading">
+    <svg class="loading-circle" viewBox="0 0 54 54">
+      <circle cx='50%' cy='50%' r='25'></circle>
+    </svg>
+  </div>
   <div class="container">    
     <nav class="global-nav">
       <div class="global-nav-links">
