--- a/src/html/index.html
+++ b/src/html/index.html
@@ -101,9 +101,18 @@
          harum nihil vel. Quas inventore perferendis iusto explicabo animi eos ratione obcaecati.
       </p>
     </section>
-
+    <section class="normal-content">
+      <p class="mid-message">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, molestias! Illum, nobis vel recusandae, cumque rerum fugiat error quod magnam eligendi quos suscipit iusto temporibus? Corporis, optio velit. Quia, temporibus. Adipisci sequi minima nihil neque, magnam vel officiis culpa eveniet quibusdam id explicabo? Dolorem porro quam reiciendis. Optio distinctio natus aliquid nobis debitis fugit hic asperiores voluptatum nihil fugiat repellendus illo sit numquam, veniam quibusdam quidem accusamus quasi veritatis, blanditiis deserunt magni sed iusto. Sapiente fugiat porro corporis temporibus, consectetur atque praesentium deleniti laborum officiis voluptatum eaque ut necessitatibus velit magni. Tempora ut facere molestiae nostrum doloribus natus illum! Consequuntur.
+      </p>
+    </section>
+    <section class="normal-content">
+      <p class="mid-message">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, molestias! Illum, nobis vel recusandae, cumque rerum fugiat error quod magnam eligendi quos suscipit iusto temporibus? Corporis, optio velit. Quia, temporibus. Adipisci sequi minima nihil neque, magnam vel officiis culpa eveniet quibusdam id explicabo? Dolorem porro quam reiciendis. Optio distinctio natus aliquid nobis debitis fugit hic asperiores voluptatum nihil fugiat repellendus illo sit numquam, veniam quibusdam quidem accusamus quasi veritatis, blanditiis deserunt magni sed iusto. Sapiente fugiat porro corporis temporibus, consectetur atque praesentium deleniti laborum officiis voluptatum eaque ut necessitatibus velit magni. Tempora ut facere molestiae nostrum doloribus natus illum! Consequuntur.
+      </p>
+    </section>
     <footer class="footer">
-      2020, 1분 코딩
+      2020, experimental project
     </footer>
   </div>
 </body>
