--- a/src/html/index.html
+++ b/src/html/index.html
@@ -82,33 +82,14 @@
     </section>
 
     <section id="scroll-section-3" class="scroll-section">
-      <div class="mid-message">
+      <p class="mid-message">
         <strong>Retina Mug</strong>
         It's and idea that's going to be a big.<br>
         Beautiful and soft drink space.
-      </div>
+      </p>
       <canvas class="image-blend-canvas" width="1920" height="1080"></canvas>
       <p class="canvas-caption ">
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-        Eveniet at fuga quae perspiciatis veniam impedit et, ratione est optio porro. 
-        Incidunt aperiam nemo voluptas odit quisquam harum in mollitia. 
-        Incidunt minima iusto in corporis, dolores velit. Autem, sit dolorum 
-        inventore a rerum distinctio vero illo magni possimus temporibus dolores 
-        neque adipisci, repudiandae repellat. Ducimus accusamus similique quas earum 
-        laborum. Autem tempora repellendus asperiores illum ex! Velit ea corporis odit?
-         Ea, incidunt delectus. Sapiente rerum neque error deleniti quis, et, 
-         quibusdam, est autem voluptate rem voluptas. Ratione soluta similique 
-         harum nihil vel. Quas inventore perferendis iusto explicabo animi eos ratione obcaecati.
-      </p>
-    </section>
-    <section class="normal-content">
-      <p class="mid-message">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, molestias! Illum, nobis vel recusandae, cumque rerum fugiat error quod magnam eligendi quos suscipit iusto temporibus? Corporis, optio velit. Quia, temporibus. Adipisci sequi minima nihil neque, magnam vel officiis culpa eveniet quibusdam id explicabo? Dolorem porro quam reiciendis. Optio distinctio natus aliquid nobis debitis fugit hic asperiores voluptatum nihil fugiat repellendus illo sit numquam, veniam quibusdam quidem accusamus quasi veritatis, blanditiis deserunt magni sed iusto. Sapiente fugiat porro corporis temporibus, consectetur atque praesentium deleniti laborum officiis voluptatum eaque ut necessitatibus velit magni. Tempora ut facere molestiae nostrum doloribus natus illum! Consequuntur.
-      </p>
-    </section>
-    <section class="normal-content">
-      <p class="mid-message">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, molestias! Illum, nobis vel recusandae, cumque rerum fugiat error quod magnam eligendi quos suscipit iusto temporibus? Corporis, optio velit. Quia, temporibus. Adipisci sequi minima nihil neque, magnam vel officiis culpa eveniet quibusdam id explicabo? Dolorem porro quam reiciendis. Optio distinctio natus aliquid nobis debitis fugit hic asperiores voluptatum nihil fugiat repellendus illo sit numquam, veniam quibusdam quidem accusamus quasi veritatis, blanditiis deserunt magni sed iusto. Sapiente fugiat porro corporis temporibus, consectetur atque praesentium deleniti laborum officiis voluptatum eaque ut necessitatibus velit magni. Tempora ut facere molestiae nostrum doloribus natus illum! Consequuntur.
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet at fuga quae perspiciatis veniam impedit et, ratione est optio porro. Incidunt aperiam nemo voluptas odit quisquam harum in mollitia. Incidunt minima iusto in corporis, dolores velit. Autem, sit dolorum inventore a rerum distinctio vero illo magni possimus temporibus dolores neque adipisci, repudiandae repellat. Ducimus accusamus similique quas earum laborum. Autem tempora repellendus asperiores illum ex! Velit ea corporis odit? Ea, incidunt delectus. Sapiente rerum neque error deleniti quis, et, quibusdam, est autem voluptate rem voluptas. Ratione soluta similique harum nihil vel. Quas inventore perferendis iusto explicabo animi eos ratione obcaecati.
       </p>
     </section>
     <footer class="footer">
